# cite-cli

./: .cruft.json  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  cron.yml
scripts/: sheet_tracker.gs
src/cite/: __init__.py  _backup.py  _calendar.py  _cleanup.py  _email.py  _log.py  _notify.py  _renew.py  _util.py  cli.py  remote.py
src/cite/mock_renew/: __init__.py  index.html  mock.c2l  server.py
tests/: conftest.py  test_apply_update.py  test_calendar.py  test_cite.py  test_log.py  test_notify.py  test_renew.py
